2023-08-08T08:18:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5794496077 # 1063
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
* notice: last 14d: unq all: 7 29
* notice: prev accum: outdated-unq outdated-all / unq all: 574 917 / 594 947
* notice: next accum: outdated-unq outdated-all / unq all: 574 917 / 595 948
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-25 2023-08-08]

2023-08-07T16:19:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5787496859 # 1061
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 7 30
* notice: prev accum: outdated-unq outdated-all / unq all: 573 915 / 594 947
* notice: next accum: outdated-unq outdated-all / unq all: 574 917 / 594 947
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-24] / []

2023-08-07T01:16:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5779900410 # 1059
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 7 31
* notice: prev accum: outdated-unq outdated-all / unq all: 573 915 / 593 945
* notice: next accum: outdated-unq outdated-all / unq all: 573 915 / 594 947
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -1 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-07-24 2023-08-06]

2023-08-06T16:18:47Z: