@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-08T08:18:36Z",
-  "count_outdated" : 917,
-  "uniques_outdated" : 574,
+  "timestamp" : "2023-08-08T16:19:56Z",
+  "count_outdated" : 920,
+  "uniques_outdated" : 576,
   "count" : 948,
   "uniques" : 595,
   "clones" : [
-    {
-      "timestamp": "2023-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-26T00:00:00Z",
       "count": 2,
